--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PokeChaton)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(PokeChaton main.cpp components/Poke/PokeChat.cpp header/Poke/Speace.h components/Poke/Speace.cpp components/db/CSVTraitement.cpp components/db/CSVTraitement.h)
+add_executable(PokeChaton main.cpp components/Poke/PokeChat.cpp header/Poke/Species.h components/Poke/Species.cpp components/db/CSVTraitement.cpp components/db/CSVTraitement.h components/db/CSVRecord.h)
