creation de du menu principal avec la base du CSV reader et lecture de la liste de question

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(PokeChaton)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(PokeChaton main.cpp components/Interface/Interface.cpp components/Interface/Interface.h)
+add_executable(PokeChaton main.cpp components/Interface/Interface.cpp components/Interface/Interface.h components/Question/Question.cpp components/Question/Question.h components/CSVReader.cpp components/CSVReader.h)
